# ad_efficiency

./: Dockerfile  README.md  app.py  check.py  criteo_loader.py  criteo_model.pth  environment.py  inference.py  openenv.yaml  push_out.txt  pyproject.toml  requirements.txt  uv_error.txt
server/: app.py
templates/: index.html  index_backup.html
