[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ad-auction-env"
version = "1.0.0"
description = "Ad Auction Efficiency Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Arsal" }
]
keywords = ["advertising", "auction", "reinforcement-learning", "openenv"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.1.0",
    "torch>=2.2.0",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    "openai>=1.27.0",
    "pyyaml>=6.0.1",
    "matplotlib>=3.8.0",
    "huggingface_hub>=0.23.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/11Arsalan/ad-auction-env"

[tool.setuptools.packages.find]
where = ["."]

[tool.openenv]
environment = "AdAuctionEnv"
version = "1.0.0"
entry_point = "app:app"
tasks = ["easy", "medium", "hard"]
multi_node = true
